...
            "state" : "translated",
            "value" : "价格"
          }
        }
      }
    },
    "Price Chart" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "价格图表"
          }
...
            "state" : "translated",
            "value" : "交易结果"
          }
        }
      }
    },
    "Trades" : {
      "extractionState" : "stale",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "交易"
...
